--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,9 @@ html, body{
   height: 100%;
   width: 100%;
   overflow: hidden;
+  box-sizing: border-box;
+}
+
+a, button {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
