--- a/src/styles/space.css
+++ b/src/styles/space.css
@@ -1,5 +1,5 @@
 .wall{
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/18515/PIA09959-1280x800_copy.jpg);
+  background: url('./space.png');
   background-size: cover;
 }
 
