--- a/src/styles/stars.sass
+++ b/src/styles/stars.sass
@@ -5,8 +5,8 @@
     $value: '#{$value} , #{random(2000)}px #{random(2000)}px #FFF'
   @return unquote($value)
 
-$shadows-small:  multiple-box-shadow(50)
-$shadows-medium: multiple-box-shadow(75)
+$shadows-small:  multiple-box-shadow(40)
+$shadows-medium: multiple-box-shadow(60)
 $shadows-big:    multiple-box-shadow(100)
 
 html
@@ -18,7 +18,7 @@ html
   width: 1px
   height: 1px
   background: transparent
-  box-shadow: $shadows-small
+  //box-shadow: $shadows-small
   animation			: animStar 50s linear infinite
 
   &:after
@@ -28,7 +28,7 @@ html
     width: 1px
     height: 1px
     background: transparent
-    box-shadow: $shadows-small
+    //box-shadow: $shadows-small
 
 #stars2
   width: 2px
@@ -44,13 +44,13 @@ html
     width: 2px
     height: 2px
     background: transparent
-    box-shadow: $shadows-medium
+    //box-shadow: $shadows-medium
 
 #stars3
   width: 3px
   height: 3px
   background: transparent
-  box-shadow: $shadows-big
+  //box-shadow: $shadows-big
   animation			: animStar 150s linear infinite
 
   &:after
@@ -60,7 +60,7 @@ html
     width: 3px
     height: 3px
     background: transparent
-    box-shadow: $shadows-big
+    //box-shadow: $shadows-big
 
 @keyframes animStar
   from
