--- a/src/styles/space.css
+++ b/src/styles/space.css
@@ -1,5 +1,5 @@
-.wall{
-  background: url('./space.png');
+.wall {
+  background: url("./space.png");
   background-size: cover;
 }
 
@@ -11,14 +11,14 @@
   text-align: center;
 }
 
-.root:before{
-  content: '';
+.root:before {
+  content: "";
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
 
-.scene{
+.scene {
   display: inline-block;
   vertical-align: middle;
   perspective: 5px;
@@ -26,7 +26,7 @@
   position: relative;
 }
 
-.wrap{
+.wrap {
   position: absolute;
   width: 1000px;
   height: 1000px;
@@ -35,10 +35,9 @@
   transform-style: preserve-3d;
   animation: move 12s infinite linear;
   animation-fill-mode: forwards;
-
 }
 
-.wrap:nth-child(2){
+.wrap:nth-child(2) {
   animation: move 12s infinite linear;
   animation-delay: 6s;
 }
@@ -77,16 +76,16 @@
 }
 
 @keyframes move {
-  0%{
+  0% {
     transform: translateZ(-500px) rotate(0deg);
   }
-  100%{
+  100% {
     transform: translateZ(500px) rotate(0deg);
   }
 }
 
 @keyframes fade {
-  0%{
+  0% {
     opacity: 0;
   }
   25% {
@@ -95,7 +94,7 @@
   75% {
     opacity: 1;
   }
-  100%{
+  100% {
     opacity: 0;
   }
 }
